--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,3 +79,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit-mock:' + versions.retrofit
     implementation 'com.squareup.okhttp3:logging-interceptor:' + versions.okhttp
 }
+
+apply from: '../spotless.gradle'
