--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -14,6 +14,7 @@ ext.versions = [
         // Plugins
         gradlePlugin        : '3.3.2',
         fabricPlugin        : '1.+',
+        spotlessPlugin    : '3.23.1',
 
         // Kotlin
         kotlin              : '1.3.40',
