--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,18 @@ dependencies {
     //tests
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:' + versions.junit
+    testImplementation "org.mockito:mockito-core:" + versions.mockitoVersion
+    testImplementation 'androidx.arch.core:core-testing:' + versions.coreTestingVersion
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:' + versions.coroutines
+
+
+
     androidTestImplementation 'androidx.test:runner:' + versions.testRunner
     androidTestImplementation 'androidx.test.espresso:espresso-core:' + versions.espressoCore
+    androidTestImplementation 'androidx.arch.core:core-testing:' + versions.coreTestingVersion
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2'
+
+
 
     // Kotlin
     implementation 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:' + versions.kotlin
@@ -60,6 +70,7 @@ dependencies {
     // Coroutine
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:' + versions.coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:' + versions.coroutines
+
 
     // Android X
     implementation 'androidx.core:core-ktx:' + versions.androidxCore
