--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -9,10 +9,15 @@ ext.versions = [
         //tests
         junit               : '4.12',
         testRunner          : '1.2.0',
-        espressoCore        : '3.2.0',
+        espressoCore        : '3.2.0-beta01',
         coreTestingVersion  : '2.0.0',
-        coroutinesCore      : '1.2.1',
+        coroutinesCore      : '1.3.2',
         coroutinesTest      : '1.3.2',
+        dexMaker            : '2.12.1',
+        fragment            : '1.1.0-alpha07',
+        androidxCore        : '1.2.0',
+        roboelectric        : '4.3.1',
+        androidXTestExtKotlinRunner :'1.1.1',
 
         //mockito
         mockitoVersion      : "2.25.0",
@@ -24,11 +29,11 @@ ext.versions = [
         spotlessPlugin    : '3.23.1',
 
         // Kotlin
-        kotlin              : '1.3.40',
+        kotlin              : '1.3.50',
         coroutines          : '1.2.1',
 
         // AndroidX
-        androidxCore        : '1.0.1',
+        androidXCore       : '1.0.1',
         androidxRecyclerView: '1.0.0',
         androidxMaterial    : '1.0.0',
         androidxBrowser     : '1.0.0',
