--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,6 +94,10 @@ dependencies {
 
     //workmanager
     implementation 'android.arch.work:work-runtime-ktx:' + versions.work
+
+    //mockito
+    testImplementation "org.mockito:mockito-core:2.11.0"
+    androidTestImplementation "org.mockito:mockito-android:2.11.0"
 }
 
 apply from: '../spotless.gradle'
