--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,6 +13,7 @@ ext.versions = [
         coreTestingVersion  : '2.0.0',
         coroutinesCore      : '1.2.1',
         coroutinesTest      : '1.3.2',
+        truthTest           : '1.0.1',
 
         //mockito
         mockitoVersion      : "2.25.0",
